--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nilesh Choudhary | Senior Java Developer</title>
+  <title>Nilesh Choudhary | Java Developer</title>
 
   <style>
     :root {
@@ -13,10 +14,14 @@
       --accent: #22d3ee;
       --text: #e5e7eb;
       --muted: #9ca3af;
-      --border: rgba(255,255,255,0.08);
+      --border: rgba(255, 255, 255, 0.08);
     }
 
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
     body {
       font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
@@ -68,7 +73,7 @@
 
     .actions a:hover {
       transform: translateY(-4px);
-      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
     }
 
     section {
@@ -99,10 +104,12 @@
 
     .card:hover {
       transform: translateY(-6px);
-      box-shadow: 0 30px 60px rgba(0,0,0,0.45);
+      box-shadow: 0 30px 60px rgba(0, 0, 0, 0.45);
     }
 
-    .card h3 { margin-bottom: 0.6rem; }
+    .card h3 {
+      margin-bottom: 0.6rem;
+    }
 
     .card h3 a {
       color: inherit;
@@ -120,8 +127,13 @@
       margin-bottom: 1rem;
     }
 
-    ul { padding-left: 1.2rem; }
-    li { margin-bottom: 0.5rem; }
+    ul {
+      padding-left: 1.2rem;
+    }
+
+    li {
+      margin-bottom: 0.5rem;
+    }
 
     .tags span {
       display: inline-block;
@@ -129,8 +141,8 @@
       padding: 0.45rem 0.85rem;
       font-size: 0.8rem;
       border-radius: 999px;
-      background: rgba(99,102,241,0.15);
-      border: 1px solid rgba(99,102,241,0.35);
+      background: rgba(99, 102, 241, 0.15);
+      border: 1px solid rgba(99, 102, 241, 0.35);
     }
 
     footer {
@@ -141,92 +153,105 @@
     }
   </style>
 </head>
+
 <body>
 
-<header>
-  <h1>Nilesh Choudhary</h1>
-  <p>
-    Senior Java Developer with strong experience in Spring Boot, Microservices, and
-    enterprise-scale systems. Currently working at TCS (Client: JPMorgan Chase),
-    building high-performance, secure, and scalable backend platforms.
-  </p>
-   <div class="actions">
-    <a href="mailto:nileshchoudhary.dev@gmail.com">Contact Me</a>
-    <a href="https://github.com/nileshchoudhary37?tab=repositories" target="_blank" class="secondary">GitHub</a>
-    <a href="https://www.linkedin.com/in/nilesh-kumar-choudhary-1b90681b6/" target="_blank" class="secondary">LinkedIn</a>
-  </div>
-</header>
+  <header>
+    <h1>Nilesh Choudhary</h1>
+    <p>
+      Back-End Developer with 2+ years of experience building scalable, secure, and high-performance applications using
+      Java and Spring Boot. Currently working at TCS (Client: JPMorgan Chase),
+      building high-performance, secure, and scalable backend platforms. Skilled in designing microservices
+      architectures, implementing JWT-based authentication and role-based access control, and optimizing database
+      performance with PostgreSQL.
 
-<section id="projects">
-  <h2>Projects</h2>
-  <div class="grid">
+      Hands-on experience developing production-grade systems, including transaction-heavy and performance-sensitive
+      applications, with a strong focus on clean architecture and maintainable code. Actively contribute to system
+      optimization and CI/CD enhancements, improving deployment efficiency and overall reliability.
 
-    <div class="card">
-      <h3>
-        <a href="https://voluble-douhua-2765c4.netlify.app/" target="_blank">
-          Global COVID-19 Map Dashboard
-        </a>
-      </h3>
-      <div class="meta">JavaScript · Mapbox · Real-time Data</div>
-      <p>
-        Interactive dashboard visualizing global COVID-19 cases using latitude and
-        longitude mapping with real-time updates.
-      </p>
+      Passionate about writing robust backend systems, solving complex problems with efficient algorithms, and mentoring
+      peers to uphold coding best practices. Committed to delivering scalable solutions that drive measurable business
+      impact.
+    </p>
+    <div class="actions">
+      <a href="mailto:nileshchoudhary.dev@gmail.com">Contact Me</a>
+      <a href="https://github.com/nileshchoudhary37?tab=repositories" target="_blank" class="secondary">GitHub</a>
+      <a href="https://www.linkedin.com/in/nilesh-kumar-choudhary-1b90681b6/" target="_blank"
+        class="secondary">LinkedIn</a>
     </div>
+  </header>
 
-    <div class="card">
-      <h3>
-        <a href="https://spicyfoodcorner.netlify.app/" target="_blank">
-          KFC Clone
-        </a>
-      </h3>
-      <div class="meta">HTML · CSS · JavaScript · Node.js</div>
-      <p>
-        Full-stack food ordering clone with authentication, CRUD operations,
-        and cloud-based storage.
-      </p>
-    </div>
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="grid">
 
-  </div>
-</section>
-
-<section>
-  <h2>Education & Awards</h2>
-  <div class="grid">
-
-    <div class="card">
-      <h3>B.Tech — Electronics & Communication</h3>
-      <div class="meta">Asansol Engineering College · GPA 9.06 / 10</div>
-      <p>Graduated with strong foundations in engineering and problem solving.</p>
-    </div>
-
-    <div class="card">
-      <h3>Awards & Recognition</h3>
-      <ul>
-        <li>
-          <a href="assets/On_The_Spot_Award.pdf" style="color:#a5b4fc; text-decoration:none;" target="_blank">
-            On-the-Spot Award — TCS (Sep 2024)
+      <div class="card">
+        <h3>
+          <a href="https://voluble-douhua-2765c4.netlify.app/" target="_blank">
+            Global COVID-19 Map Dashboard
           </a>
-        </li>
-        <li>
-          <a href="assets/Appreciation_Certificate.pdf" style="color:#a5b4fc; text-decoration:none;" target="_blank">
-            Appreciation Certificate — TCS (Dec 2024)
+        </h3>
+        <div class="meta">JavaScript · Mapbox · Real-time Data</div>
+        <p>
+          Interactive dashboard visualizing global COVID-19 cases using latitude and
+          longitude mapping with real-time updates.
+        </p>
+      </div>
+
+      <div class="card">
+        <h3>
+          <a href="https://spicyfoodcorner.netlify.app/" target="_blank">
+            KFC Clone
           </a>
-        </li>
-        <li>
-          <a href="#" style="color:#a5b4fc; text-decoration:none;">
-            Nominated twice for Best Performer Award
-          </a>
-        </li>
-      </ul>
+        </h3>
+        <div class="meta">HTML · CSS · JavaScript · Node.js</div>
+        <p>
+          Full-stack food ordering clone with authentication, CRUD operations,
+          and cloud-based storage.
+        </p>
+      </div>
+
     </div>
+  </section>
 
-  </div>
-</section>
+  <section>
+    <h2>Education & Awards</h2>
+    <div class="grid">
 
-<footer>
-  © 2026 Nilesh Choudhary · Built for scale, performance, and impact
-</footer>
+      <div class="card">
+        <h3>B.Tech — Electronics & Communication</h3>
+        <div class="meta">Asansol Engineering College · GPA 9.06 / 10</div>
+        <p>Graduated with strong foundations in engineering and problem solving.</p>
+      </div>
+
+      <div class="card">
+        <h3>Awards & Recognition</h3>
+        <ul>
+          <li>
+            <a href="assets/On_The_Spot_Award.pdf" style="color:#a5b4fc; text-decoration:none;" target="_blank">
+              On-the-Spot Award — TCS (Sep 2024)
+            </a>
+          </li>
+          <li>
+            <a href="assets/Appreciation_Certificate.pdf" style="color:#a5b4fc; text-decoration:none;" target="_blank">
+              Appreciation Certificate — TCS (Dec 2024)
+            </a>
+          </li>
+          <li>
+            <a href="#" style="color:#a5b4fc; text-decoration:none;">
+              Nominated twice for Best Performer Award
+            </a>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </section>
+
+  <footer>
+    © 2026 Nilesh Choudhary · Built for scale, performance, and impact
+  </footer>
 
 </body>
+
 </html>
