modified profile summery

--- a/index.html
+++ b/index.html
@@ -160,18 +160,15 @@
     <h1>Nilesh Choudhary</h1>
     <p>
       Back-End Developer with 2+ years of experience building scalable, secure, and high-performance applications using
-      Java and Spring Boot. Currently working at TCS (Client: JPMorgan Chase),
+      Java and Spring Boot. Currently working at <strong>TCS (Client: JPMorgan Chase)</strong>,
       building high-performance, secure, and scalable backend platforms. Skilled in designing microservices
       architectures, implementing JWT-based authentication and role-based access control, and optimizing database
       performance with PostgreSQL.
-
+      <br>
       Hands-on experience developing production-grade systems, including transaction-heavy and performance-sensitive
       applications, with a strong focus on clean architecture and maintainable code. Actively contribute to system
       optimization and CI/CD enhancements, improving deployment efficiency and overall reliability.
 
-      Passionate about writing robust backend systems, solving complex problems with efficient algorithms, and mentoring
-      peers to uphold coding best practices. Committed to delivering scalable solutions that drive measurable business
-      impact.
     </p>
     <div class="actions">
       <a href="mailto:nileshchoudhary.dev@gmail.com">Contact Me</a>
